Fix the grid dip shit spacing

--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,11 @@ justify-content: center;
 .Component-expense-card-container{
   min-height:150px;
 }
+
+.Component-kanban-card-row{
+  margin-top: 32px;
+  margin-left: 10px;
+}
 .Component-upload-progress{
   margin-top: 5px;
 }
